<resources>
    <string name="app_name">Social Media</string>
    <string name="btn_login">Entrar</string>
    <string name="btn_register">Cadastrar</string>
    <string name="btn_finish_register">Cadastrar</string>
    <string name="btn_createpost">Publicar</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Senha</string>
    <string name="hint_confirm_password">Confirmar Senha</string>
    <string name="hint_name_user">Nome Completo</string>
    <string name="hint_born_date">Data de Nascimento</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_post_title">Título</string>
    <string name="hint_post_description">Descrição</string>
    <string name="hint_comments_send">Insira um comentário</string>
    <string name="register_new_user_title">Novo Usuário</string>
    <string name="photo_profile">Foto de Perfil</string>
    <string name="cd_img_register_user">Imagem perfil do usuário</string>
    <string name="cd_img_createpost">Imagem do post criado</string>
    <string name="cd_btn_icone_foto">Ícone da foto</string>
    <string name="cd_avatar_post">Avatar usuário post</string>
    <string name="cd_btn_follow">Botão de seguir</string>
    <string name="cd_btn_comment">Botão de Comentário</string>
    <string name="cd_img_post">Imagem do post</string>
    <string name="op_logout_title">Sair</string>
    <string name="op_login_title">Entrar</string>
    <string name="op_addpost_title">Adicionar Novo Post</string>
    <string name="op_friends_title">Amigos</string>
    <string name="op_gallery_title">Galeria de Fotos</string>
    <string name="op_allworld_title">Todo Mundo</string>
    <string name="op_myworld_title">Meu Mundo</string>
    <string name="op_onlyme_title">Só Meu</string>
    <string name="op_search_friends">Procurar Amigos</string>
    <string name="tv_timeline_post_login">Login do usuário</string>
    <string name="tv_timeline_post_name">Nome do usuário</string>
    <string name="tv_timeline_post_date">Data de publicação</string>
    <string name="tv_timeline_post_title">Título do post</string>
    <string name="tv_timeline_post_description">Descrição do post</string>
    <string name="tv_friends_city">Cidade</string>
    <string name="data_do_comentario">Data do comentário</string>
    <string name="descricao_do_comentario">Descrição do comentário</string>
</resources>